Fix overflow behaviour in address on small screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -193,6 +193,7 @@ address {
   white-space: nowrap;
 
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   width: 100%;
